--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.css
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.css
@@ -1,5 +1,7 @@
 a{
   padding: 2rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .list-group-item{
@@ -13,4 +15,11 @@ a div .list-group-item-heading{
 a div .list-group-item-text{
   font-size: 1.5rem;
   font-weight: 500;
+  padding-right: 2rem;
+}
+
+img{
+  max-width: 60px;
+  max-height: 60px;
+  object-fit: contain;
 }
